Add integration test fixes #17

--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -16,6 +16,10 @@ dependencies {
     compile "io.micrometer:micrometer-core:$micrometerVersion"
 
     testCompile project(":protobuf")
+
+    itCompile "junit:junit:$junitVersion"
+    itCompile project(":protobuf")
+    itCompile project(":testing")
 }
 
 jmh {
