--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ allprojects {
         prometheusVersion = "0.6.0"
         micrometerVersion = "1.3.1"
         lombokVersion = "1.18.4"
+        junitVersion = "4.12"
 
         isReleaseVersion = !version.endsWith('-SNAPSHOT')
     }
@@ -57,7 +58,7 @@ subprojects {
         annotationProcessor "org.projectlombok:lombok:$lombokVersion"
 
         // Likely be used for most modules
-        testImplementation "junit:junit:4.12"
+        testImplementation "junit:junit:$junitVersion"
         testImplementation "org.mockito:mockito-core:2.23.4"
         testImplementation "org.mockito:mockito-inline:2.23.4"
     }
@@ -65,6 +66,18 @@ subprojects {
     configurations {
         shade
         compile.extendsFrom(shade)
+        itCompile.extendsFrom compile
+    }
+
+    sourceSets.create('it') {
+        compileClasspath += sourceSets.main.output
+        runtimeClasspath += sourceSets.main.output
+    }
+
+    task integrationTest(type: Test) {
+        testClassesDirs = sourceSets.it.output.classesDirs
+        classpath = sourceSets.it.runtimeClasspath
+        shouldRunAfter test
     }
 
     afterEvaluate {
@@ -197,6 +210,6 @@ subprojects {
             archiveClassifier = 'javadoc'
             from javadoc
         }
-        build.dependsOn(javadoc)
+        check.dependsOn(javadoc, integrationTest)
     }
 }
